# today_is

./: .env.example  .gitignore  README.md  alembic.ini  compose.yml  composer.json  main.py  pyproject.toml  requirements.txt  requiremetnts.txt
alembic/: env.py
alembic/versions/: 2025_07_13_2118-5fd5925da995_initial_revision.py  2025_07_14_0144-071238e12139_add_timezone.py
app/Models/: Record.php  User.php
app/Telegram/Commands/: SettingsCommand.php  StartCommand.php
app/Telegram/Handlers/: LocationHandler.php
app/Telegram/Middleware/: AuthMiddleware.php  IsRegisteredUser.php
bot/: config.py  database.py  main.py  middleware.py  models.py  replies.py
bot/handlers/: __init__.py  help.py  location.py  records.py  settings.py  start.py  statistics.py  today_is.py  tools.py
bot/utils/: date.py  dictionary.py  keyboards.py  notify_admin.py  states.py  times.py
database/migrations/: 2014_10_12_000000_create_users_table.php  2023_01_17_060131_create_records_table.php
routes/: telegram.php
src/bot/: config.py  enums.py  main.py
src/bot/handlers/: base.py  errors.py  records.py
src/bot/internal/: callbacks.py  commands.py  controllers.py  enums.py  helpers.py  keyboards.py  notify_admin.py  replies.py
src/bot/middlewares/: auth.py  session.py  updates_dumper.py
src/database/: db_connector.py  models.py
src/database/crud/: record.py  user.py
