[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bot"
description = ""
version = "0.0.1"
authors = [
    { name = "vasgg", email = "vas.g@me.com" },
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.13"

dependencies = [
    "aiogram>=3.20.0.post0",
    "alembic>=1.16.1",
    "asyncpg>=0.30.0",
    "greenlet>=3.2.3",
    "pydantic-settings>=2.9.1",
    "redis>=6.2.0",
    "ruff>=0.11.13",
    "sqlalchemy>=2.0.41",
]

[tool.ruff]
line-length = 119
target-version = "py313"
exclude = [
    "alembic",
]

[project.scripts]
bot-run = "bot.main:run_main"
